--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hi</h1>
+  <h1>Welcome</h1>
+  <p>So sorry, my site is currently under construction.</p>
+  <p>Thank you for visiting!</p>
 </body>
 </html>
